--- a/CourrierWeb/Web.config
+++ b/CourrierWeb/Web.config
@@ -63,7 +63,7 @@
       <!--<add name="CourrierDataContext" 
         connectionString="Data Source=yzyntw1dyw.database.windows.net;Initial Catalog=CourrierDataBase;user id=pankaj.dhami;password=april@comp123;" 
         providerName="System.Data.SqlClient"/>-->
-   <add name="CourrierDataContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CourrierDataBase;Integrated Security=true;" providerName="System.Data.SqlClient" />
+   <add name="CourrierDataContext" connectionString="Data Source=.;Initial Catalog=CourrierDataBase;Integrated Security=true;" providerName="System.Data.SqlClient" />
   
   </connectionStrings>
   <entityFramework>
