--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\AYDS.Storage\packages.config" />
   <repository path="..\CourrierBO\packages.config" />
   <repository path="..\CourrierStorage\packages.config" />
   <repository path="..\CourrierWeb\packages.config" />
