--- a/AYDS.Storage/AYDS.Storage.csproj
+++ b/AYDS.Storage/AYDS.Storage.csproj
@@ -128,6 +128,12 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AYDS.BO\AYDS.BO.csproj">
+      <Project>{07f5b88e-0a98-40f4-8bdb-660aa49119c6}</Project>
+      <Name>AYDS.BO</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
