--- a/CourrierWeb/Web.config
+++ b/CourrierWeb/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -60,11 +60,10 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-      <!--<add name="CourrierDataContext" 
-        connectionString="Data Source=yzyntw1dyw.database.windows.net;Initial Catalog=CourrierDataBase;user id=pankaj.dhami;password=april@comp123;" 
-        providerName="System.Data.SqlClient"/>-->
-   <add name="CourrierDataContext" connectionString="Data Source=.;Initial Catalog=CourrierDataBase;Integrated Security=true;" providerName="System.Data.SqlClient" />
-  
+    <add name="CourrierDataContext" connectionString="Data Source=.;Initial Catalog=CourrierDataBase;Integrated Security=true;"
+      providerName="System.Data.SqlClient" />
+    <add name="AYDSWebApiContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=AYDSWebApiContext-20160124233213; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|AYDSWebApiContext-20160124233213.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
