--- a/CourrierWeb/Web.config
+++ b/CourrierWeb/Web.config
@@ -5,9 +5,10 @@
   -->
 <configuration>
   <configSections>
-    
+
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -20,8 +21,8 @@
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-   
-       <dependentAssembly>
+
+      <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-4.0.0.0" newVersion="5.2.3.0" />
       </dependentAssembly>
@@ -64,6 +65,11 @@
       providerName="System.Data.SqlClient" />
     <add name="AYDSWebApiContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=AYDSWebApiContext-20160124233213; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|AYDSWebApiContext-20160124233213.mdf"
       providerName="System.Data.SqlClient" />
+    <add name="CourrierWebContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=CourrierWebContext-20160124235004; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|CourrierWebContext-20160124235004.mdf"
+      providerName="System.Data.SqlClient" />
+    <!--<add name="AtYourDoorStepEntities" connectionString="Data Source=.; Initial Catalog=AtYourDoorStep; Integrated Security=True; MultipleActiveResultSets=True;"
+         providerName="System.Data.SqlClient" />-->
+    <add name="AtYourDoorStepEntities" connectionString="metadata=res://*/AYDSEntity.csdl|res://*/AYDSEntity.ssdl|res://*/AYDSEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AtYourDoorStep;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -71,11 +77,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<system.webServer>
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+</configuration>
