--- a/CourrierWeb/CourrierWeb.csproj
+++ b/CourrierWeb/CourrierWeb.csproj
@@ -197,7 +197,6 @@
     <Folder Include="Areas\MVC\Views\Shared\" />
     <Folder Include="Areas\WEBAPI\Models\" />
     <Folder Include="Areas\WEBAPI\Views\Shared\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -211,11 +210,16 @@
     <Compile Include="Areas\WEBAPI\Controllers\AccountController.cs" />
     <Compile Include="Areas\WEBAPI\Controllers\Default1Controller.cs" />
     <Compile Include="Areas\WEBAPI\WEBAPIAreaRegistration.cs" />
+    <Compile Include="Controllers\BookingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Identity\ClaimsAuthorizeAttribute.cs" />
+    <Compile Include="Models\CourrierWebContext.cs" />
+    <Compile Include="Models\UserDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
     <Compile Include="Startup.cs" />
